fixed main section slider titles

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta
       name="description"
       content="Atrium Physiotherapy located in the Calgary Area, looks to integrate customized physiotherapy treatment with injury prevention techniques to ensure overall musculoskeletal well being. Our mission 
-								is to treat immediate needs while providing a strengthening program that will speed up recovery and lead to long term health.<br><br>
-								You are in the right hands, experienced therapists you can trust, helping you towards an optimal well being."
+                    is to treat immediate needs while providing a strengthening program that will speed up recovery and lead to long term health.<br><br>
+                    You are in the right hands, experienced therapists you can trust, helping you towards an optimal well being."
     />
 
     <link
@@ -179,167 +179,151 @@
     </nav>
     <!-- END nav -->
 
+    <!--
+          /////////////////
+          HOME SLIDER
+          /////////////////
+        -->
+
     <section class="home-slider owl-carousel">
-      <div
-        class="slider-item"
-        style="background-image: url(images/calgary.jpg)"
-      >
-        <div class="overlay"></div>
-        <div class="container">
-          <div
-            class="row no-gutters slider-text align-items-center justify-content-start"
-            data-scrollax-parent="true"
+      <!-- <div
+            class="slider-item"
+            style="background-image: url(images/calgary.jpg)"
           >
-            <div class="col-md-6 text ftco-animate">
-              <h1 class="mb-4" style="color: #000000">
-                Helping You <span style="color: #000000">Stay Healthy </span>
-              </h1>
-              <h3 class="subheading" style="color: #000000">
-                <b
-                  >Our goal is to make your rehabilitation fast, convenient and
-                  comprehensive.</b
-                >
-              </h3>
-              <p>
-                <a href="services.html" class="btn btn-secondary px-4 py-3 mt-3"
-                  >View our Services</a
-                >
-              </p>
+            <div class="overlay"></div>
+            <div class="container">
+              <div
+                class="row no-gutters slider-text align-items-center justify-content-start"
+                data-scrollax-parent="true"
+              >
+                <div class="col-md-6 text ftco-animate">
+                  <h1 class="mb-4">
+                    Helping You Stay Healthy
+                  </h1>
+                  <h3 class="subheading">
+                      Our goal is to make your rehabilitation fast, convenient and
+                      comprehensive
+                  </h3>
+                  <p>
+                    <a href="services.html" class="btn btn-secondary px-4 py-3 mt-3"
+                      >View our Services</a
+                    >
+                  </p>
+                </div>
+              </div>
             </div>
-          </div>
-        </div>
-      </div>
+          </div> -->
 
-      <div
-        class="slider-item"
-        style="background-image: url(images/running.jpg)"
-        data-stellar-background-ratio="0.5"
-      >
-        <div class="overlay"></div>
-        <div class="container">
-          <div
-            class="row no-gutters slider-text align-items-center justify-content-start"
-            data-scrollax-parent="true"
+      <!-- <div
+            class="slider-item"
+            style="background-image: url(images/running.jpg)"
+            data-stellar-background-ratio="0.5"
           >
-            <div class="col-md-6 text ftco-animate">
-              <h1 class="mb-4" style="color: #000000">
-                Your Health<span style="color: #000000"> is Our Priority </span>
-              </h1>
-              <h3 class="subheading" style="color: #000000">
-                <b>Feel Better. Live Better.</b>
-              </h3>
-              <p>
-                <a href="services.html" class="btn btn-secondary px-4 py-3 mt-3"
-                  >View our Services</a
-                >
-              </p>
+            <div class="overlay"></div>
+            <div class="container">
+              <div
+                class="row no-gutters slider-text align-items-center justify-content-start"
+                data-scrollax-parent="false"
+              >
+                <div class="col-md-6 text ftco-animate">
+                  <h1 class="mb-4">
+                    Your Health is Our Priority
+                  </h1>
+                  <h3 class="subheading">
+                    Feel Better. Live Better.
+                  </h3>
+                  <p>
+                    <a href="services.html" class="btn btn-secondary px-4 py-3 mt-3"
+                      >View our Services</a
+                    >
+                  </p>
+                </div>
+              </div>
             </div>
-          </div>
-        </div>
-      </div>
-      <div
-        class="slider-item"
-        style="background-image: url(images/bg_1.jpg)"
-        data-stellar-background-ratio="0.5"
-      >
-        <div class="overlay"></div>
-        <div class="container">
-          <div
-            class="row no-gutters slider-text align-items-center justify-content-start"
-            data-scrollax-parent="true"
+          </div> -->
+      <!-- <div
+            class="slider-item"
+            style="background-image: url(images/bg_1.jpg)"
+            data-stellar-background-ratio="0.5"
           >
-            <div class="col-md-6 text ftco-animate">
-              <h1 class="mb-4" style="color: #000000">
-                Helping You <span style="color: #000000">Stay Healthy </span>
-              </h1>
-              <h3 class="subheading" style="color: #000000">
-                <b>Get well, Move well, Enjoy the freedom again.</b>
-              </h3>
-              <p>
-                <a href="services.html" class="btn btn-secondary px-4 py-3 mt-3"
-                  >View our Services</a
-                >
-              </p>
+            <div class="overlay"></div>
+            <div class="container">
+              <div
+                class="row no-gutters slider-text align-items-center justify-content-start"
+                data-scrollax-parent="true"
+              >
+                <div class="col-md-6 text ftco-animate">
+                  <h1 class="mb-4">Stay Healthy</h1>
+                  <h3 class="subheading">
+                    Get well, Move well, Enjoy the freedom again.
+                  </h3>
+                  <p>
+                    <a href="services.html" class="btn btn-secondary px-4 py-3 mt-3">View our Services</a>
+                  </p>
+                </div>
+              </div>
             </div>
-          </div>
-        </div>
-      </div>
+          </div> -->
 
-      <div class="slider-item" style="background-image: url(images/golf.jpg)">
-        <div class="overlay"></div>
-        <div class="container">
-          <div
-            class="row no-gutters slider-text align-items-center justify-content-start"
-            data-scrollax-parent="true"
-          >
-            <div class="col-md-6 text ftco-animate">
-              <h1 class="mb-4" style="color: #000000">
-                We Care <span style="color: #000000">About Your Health</span>
-              </h1>
-              <h3 class="subheading" style="color: #000000">
-                <b>Your partner in good health.</b>
-              </h3>
-              <p>
-                <a href="services.html" class="btn btn-secondary px-4 py-3 mt-3"
-                  >View our Services</a
-                >
-              </p>
+      <!-- <div class="slider-item" style="background-image: url(images/golf.jpg)">
+            <div class="overlay"></div>
+            <div class="container">
+              <div
+                class="row no-gutters slider-text align-items-center justify-content-start"
+                data-scrollax-parent="true"
+              >
+                <div class="col-md-6 text ftco-animate">
+                  <h1 class="mb-4">
+                    We Care About Your Health
+                  </h1>
+                  <h3 class="subheading">
+                    Your partner in good health
+                  </h3>
+                  <p>
+                    <a href="services.html" class="btn btn-secondary px-4 py-3 mt-3"
+                      >View our Services</a
+                    >
+                  </p>
+                </div>
+              </div>
             </div>
-          </div>
-        </div>
-      </div>
+          </div> -->
 
-      <div class="slider-item" style="background-image: url(images/worker.jpg)">
-        <div class="overlay"></div>
-        <div class="container">
-          <div
-            class="row no-gutters slider-text align-items-center justify-content-start"
-            data-scrollax-parent="true"
-          >
-            <div class="col-md-6 text ftco-animate">
-              <h1 class="mb-4" style="color: #000000">
-                We Want <span style="color: #000000">to Help You</span>
-              </h1>
-              <h3 class="subheading" style="color: #000000">
-                <b
-                  >Your Health is our priority. Our team will provide you the
-                  personalized care you need.</b
-                >
-              </h3>
-              <p>
-                <a href="services.html" class="btn btn-secondary px-4 py-3 mt-3"
-                  >View our Services</a
-                >
-              </p>
+      <!-- <div class="slider-item" style="background-image: url(images/worker.jpg)">
+            <div class="overlay"></div>
+            <div class="container">
+              <div
+                class="row no-gutters slider-text align-items-center justify-content-start"
+                data-scrollax-parent="true"
+              >
+                <div class="col-md-6 text ftco-animate">
+                  <h1 class="mb-4">
+                    We Want to Help You
+                  </h1>
+                  <h3 class="subheading">
+                    Personlized care
+                  </h3>
+                  <p>
+                    <a href="services.html" class="btn btn-secondary px-4 py-3 mt-3"
+                      >View our Services</a
+                    >
+                  </p>
+                </div>
+              </div>
             </div>
-          </div>
-        </div>
-      </div>
+          </div> -->
 
-      <div
-        class="slider-item"
-        style="background-image: url(images/driving.jpg)"
-        data-stellar-background-ratio="0.5"
-      >
+      <div class="slider-item six" data-stellar-background-ratio="0.5">
         <div class="overlay"></div>
-        <div class="container">
-          <div
-            class="row no-gutters slider-text align-items-center justify-content-start"
-            data-scrollax-parent="true"
-          >
-            <div class="col-md-6 text ftco-animate">
-              <h1 class="mb-4" style="color: #000000">
-                Your Health<span style="color: #000000"> is Our Priority </span>
-              </h1>
-              <h3 class="subheading" style="color: #000000">
-                <b>Move well, Feel well, Be well</b>
-              </h3>
-              <p>
-                <a href="services.html" class="btn btn-secondary px-4 py-3 mt-3"
-                  >View our Services</a
-                >
-              </p>
-            </div>
+        <div class="main-container">
+          <div class="slogan-box" data-scrollax-parent="true">
+            <h1>Your Health is Our Priority</h1>
+            <h3>Move well, Feel well, Be well</h3>
+            <p>
+              <a href="services.html" class="btn btn-secondary px-4 py-3 mt-3"
+                >View our Services</a
+              >
+            </p>
           </div>
         </div>
       </div>
@@ -416,7 +400,7 @@
               <div class="media-body p-2 mt-3">
                 <h3 class="heading">Direct Billing</h3>
                 <p>
-                  We provide direct billing to various public and private
+                  available to various public and private
                   insurance providers in addition to all MVA and WCB Claims.
                 </p>
               </div>
@@ -1027,24 +1011,29 @@
                 class="ftco-footer-social list-unstyled float-md-left float-lft mt-3"
               >
                 <!-- <li class="ftco-animate">
-                  <a href="https://twitter.com/HealthPlusPhysio"
-				  target="blank"><span class="icon-twitter"></span
-                  ></a>
-                </li> -->
+                      <a href="https://twitter.com/HealthPlusPhysio"
+              target="blank"><span class="icon-twitter"></span
+                      ></a>
+                    </li> -->
                 <li class="ftco-animate">
-                  <a href="https://www.facebook.com/Atriumphysio/"
-                    target="blank"><span class="icon-facebook"></span
+                  <a
+                    href="https://www.facebook.com/Atriumphysio/"
+                    target="blank"
+                    ><span class="icon-facebook"></span
                   ></a>
                 </li>
                 <li class="ftco-animate">
-                  <a href="https://www.instagram.com/healthplusphysio/"
-				  target="blank"><span class="icon-instagram"></span
+                  <a
+                    href="https://www.instagram.com/healthplusphysio/"
+                    target="blank"
+                    ><span class="icon-instagram"></span
                   ></a>
                 </li>
                 <li class="ftco-animate">
                   <a
                     href="https://www.google.com/search?q=atriumphysiotherapy+google+reviews&rlz=1C1GCEA_enCA971CA971&oq=atriumphysiotherapy+google+reviews&aqs=chrome..69i57j69i60l3.4688j0j4&sourceid=chrome&ie=UTF-8#lrd=0x882b34cbaf51768b:0x460ff047a1eab903,1,,,"
-					target="blank"><span class="icon-google"></span
+                    target="blank"
+                    ><span class="icon-google"></span
                   ></a>
                 </li>
               </ul>
@@ -1164,16 +1153,16 @@
               </h3>
             </div>
             <!--
-            <div class="ftco-footer-widget mb-5">
-            	<h2 class="ftco-heading-2">Subscribe to Us!</h2>
-              <form action="#" class="subscribe-form">
-                <div class="form-group">
-                  <input type="text" class="form-control mb-2 text-center" placeholder="Enter email address">
-                  <input type="submit" value="Subscribe" class="form-control submit px-3">
+                <div class="ftco-footer-widget mb-5">
+                  <h2 class="ftco-heading-2">Subscribe to Us!</h2>
+                  <form action="#" class="subscribe-form">
+                    <div class="form-group">
+                      <input type="text" class="form-control mb-2 text-center" placeholder="Enter email address">
+                      <input type="submit" value="Subscribe" class="form-control submit px-3">
+                    </div>
+                  </form>
                 </div>
-              </form>
-						</div>
-						-->
+                -->
           </div>
         </div>
         <div class="row">
