changes to services description

--- a/index.html
+++ b/index.html
@@ -342,12 +342,10 @@
                 <span class="flaticon-doctor"></span>
               </div>
               <div class="media-body p-2 mt-3">
-                <h3 class="heading">Qualified</h3>
+                <h3 class="heading">Committed to Excellence</h3>
                 <p>
-                  Our physiotherapists and other service providers are committed
-                  to excellence. Providing the highest standards of care.
-                  Top-notch customer service and treatment approach that is
-                  evidence based and proven to be successful.
+                  Providing the highest standards of care.
+                  Top-notch customer service and treatment approach
                 </p>
               </div>
             </div>
@@ -362,10 +360,9 @@
                 <span class="flaticon-ambulance"></span>
               </div>
               <div class="media-body p-2 mt-3">
-                <h3 class="heading">Extensive</h3>
+                <h3 class="heading">20 Years of Experienced</h3>
                 <p>
-                  With over 20 years of combined experience we have extensive
-                  knowledge in many areas of physical and mental health.
+                  20 years of combined experience in many areas of physical and mental health.
                 </p>
               </div>
             </div>
@@ -382,8 +379,8 @@
               <div class="media-body p-2 mt-3">
                 <h3 class="heading">Leading Technology</h3>
                 <p>
-                  Our staff uses leading technology to diagnose patient issues
-                  and concerns. Allowing for agile treatment techniques
+                  To diagnose patient issues
+                  and concerns, allowing agile treatment techniques
                 </p>
               </div>
             </div>
@@ -400,7 +397,7 @@
               <div class="media-body p-2 mt-3">
                 <h3 class="heading">Direct Billing</h3>
                 <p>
-                  available to various public and private
+                  Available to various public and private
                   insurance providers in addition to all MVA and WCB Claims.
                 </p>
               </div>
