--- a/index.html
+++ b/index.html
@@ -764,47 +764,32 @@
             </form>
           </div>
           <div class="col-lg-6 p-5 bg-counter aside-stretch">
-            <h3 class="vr">About Atrium Physiotherapy Facts</h3>
+            <h3 class="vr">Hours Of Operation</h3>
             <div class="row pt-4 mt-1">
-              <div
-                class="col-md-6 d-flex justify-content-center counter-wrap ftco-animate"
-              >
-                <div class="block-18 p-5 bg-light">
-                  <div class="text">
-                    <strong class="number" data-number="28">0</strong>
-                    <span>Years of Experience</span>
-                  </div>
-                </div>
-              </div>
-              <div
-                class="col-md-6 d-flex justify-content-center counter-wrap ftco-animate"
-              >
-                <div class="block-18 p-5 bg-light">
-                  <div class="text">
-                    <strong class="number" data-number="7">0</strong>
-                    <span>Different Services</span>
-                  </div>
-                </div>
-              </div>
-              <div
-                class="col-md-6 d-flex justify-content-center counter-wrap ftco-animate"
-              >
-                <div class="block-18 p-5 bg-light">
-                  <div class="text">
-                    <strong class="number" data-number="4">0</strong>
-                    <span>Practitioners</span>
-                  </div>
-                </div>
-              </div>
-              <div
-                class="col-md-6 d-flex justify-content-center counter-wrap ftco-animate"
-              >
-                <div class="block-18 p-5 bg-light">
-                  <div class="text">
-                    <strong class="number" data-number="5">0</strong>
-                    <span>Staff</span>
-                  </div>
-                </div>
+              <div class="ftco-footer-widget mb-5">
+                <h2 class="ftco-heading-2">Operating Hours</h2>
+                <h3 class="open-hours pl-4">
+                  <span class="ion-ios-time mr-3"></span>Monday: 8:00am-7:00pm
+                </h3>
+                <h3 class="open-hours pl-4">
+                  <span class="ion-ios-time mr-3"></span>Tuesday: 8:00am-5:00pm
+                </h3>
+                <h3 class="open-hours pl-4">
+                  <span class="ion-ios-time mr-3"></span>Wednesday:
+                  8:00am-7:00pm
+                </h3>
+                <h3 class="open-hours pl-4">
+                  <span class="ion-ios-time mr-3"></span>Thursday: 8:00am-3:00pm
+                </h3>
+                <h3 class="open-hours pl-4">
+                  <span class="ion-ios-time mr-3"></span>Friday: 8:00am-7:00pm
+                </h3>
+                <h3 class="open-hours pl-4">
+                  <span class="ion-ios-time mr-3"></span>Saturday: Closed
+                </h3>
+                <h3 class="open-hours pl-4">
+                  <span class="ion-ios-time mr-3"></span>Sunday: Closed
+                </h3>
               </div>
             </div>
           </div>
@@ -820,11 +805,9 @@
 
     <section class="featured-blogs">
       <div class="container">
-          <div class="col-md-8 text-center heading-section ftco-animate">
-            <span class="subheading">Blog</span>
-            <h2 class="mb-4">Featured Blogs</h2>
-            <p>Interesting articles from us to you</p>
-          </div>
+        <span class="subheading">Blog</span>
+        <h2 class="mb-4">Featured Blogs</h2>
+        <p>Interesting articles from us to you</p>
 
         <div class="blog-thumbnail">
           <div class="col-md-4 ftco-animate">
@@ -862,7 +845,10 @@
           </div>
           <div class="col-md-4 ftco-animate">
             <div class="blog-entry">
-              <a href="blog-single.php?bID=2019062776" class="block-20" style=""
+              <a
+                href="blog-single.php?bID=2019062776"
+                class="blog-post-image featured-second"
+                style=""
                 ><div class="meta-date text-center p-2">
                   <span class="day">27</span> <span class="mos">Jun</span
                   ><span class="yr">2019</span>
@@ -893,7 +879,9 @@
           </div>
           <div class="col-md-4 ftco-animate">
             <div class="blog-entry">
-              <a href="blog-single.php?bID=199" class="block-20"
+              <a
+                href="blog-single.php?bID=199"
+                class="blog-post-image featured-third"
                 ><div class="meta-date text-center p-2">
                   <span class="day">1</span> <span class="mos">Jan</span
                   ><span class="yr">2019</span>
@@ -1077,30 +1065,6 @@
             </div>
           </div>
           <div class="col-md">
-            <div class="ftco-footer-widget mb-5">
-              <h2 class="ftco-heading-2">Operating Hours</h2>
-              <h3 class="open-hours pl-4">
-                <span class="ion-ios-time mr-3"></span>Monday: 8:00am-7:00pm
-              </h3>
-              <h3 class="open-hours pl-4">
-                <span class="ion-ios-time mr-3"></span>Tuesday: 8:00am-5:00pm
-              </h3>
-              <h3 class="open-hours pl-4">
-                <span class="ion-ios-time mr-3"></span>Wednesday: 8:00am-7:00pm
-              </h3>
-              <h3 class="open-hours pl-4">
-                <span class="ion-ios-time mr-3"></span>Thursday: 8:00am-3:00pm
-              </h3>
-              <h3 class="open-hours pl-4">
-                <span class="ion-ios-time mr-3"></span>Friday: 8:00am-7:00pm
-              </h3>
-              <h3 class="open-hours pl-4">
-                <span class="ion-ios-time mr-3"></span>Saturday: Closed
-              </h3>
-              <h3 class="open-hours pl-4">
-                <span class="ion-ios-time mr-3"></span>Sunday: Closed
-              </h3>
-            </div>
             <!--
                 <div class="ftco-footer-widget mb-5">
                   <h2 class="ftco-heading-2">Subscribe to Us!</h2>
